spade-tests/src/snapshots/spade_tests__integration__trait_tests__impl_on_unnamed_type.snap
---
source: spade-tests/src/integration.rs
---
impl (bool, bool) {}


error: Impls on tuples is currently unsupported
  ┌─ testinput:1:6
  │
1 │ impl (bool, bool) {}
  │      ^^^^^^^^^^^^ Impl target cannot be a tuple
